[project]
name = "vae"
version = "1.0.0"
description = ""
authors = [
    { name = "Xin Chen", email = "xin.chen@fftai.com" },
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]

